media-keys: Use a gsettings key for the maximum screencast length

Don't hardcode an arbitary 30 seconds limit for the maximum screencast
length but read the value out of gsettings (which defaults to 30 seconds).

https://bugzilla.gnome.org/show_bug.cgi?id=708660